# ouka2

./: .env.example  .gitignore  README.md  client_secrets.json.example  pyproject.toml
data/static/: build.sql
ouka2/: __init__.py  __main__.py
ouka2/extensions/: cutegirls.py
ouka2/utils/: __init__.py  checks.py  database.py  drive.py  tag.py
ouka2/utils/exceptions/: __init__.py  database_exceptions.py  tag_exceptions.py
ouka2/utils/views/: __init__.py  tag_views.py
